--- a/module/Admin/view/admin/admin/index.phtml
+++ b/module/Admin/view/admin/admin/index.phtml
@@ -16,7 +16,7 @@ $this->headTitle($title);
 <?php foreach ($albums as $album) : ?>
 <tr>
     <td><?php echo $this->escapeHtml($album->title);?></td>
-    <td><?php echo $this->escapeHtml($album->artist);?></td>
+    <td><?php echo $this->escapeHtml($album->admin);?></td>
     <td>
         <a href="<?php echo $this->url('admin',
             array('action'=>'edit', 'id' => $album->id));?>">Edit</a>
