--- a/module/Admin/view/admin/post/index.phtml
+++ b/module/Admin/view/admin/post/index.phtml
@@ -14,7 +14,7 @@ $this->headTitle($title);
 <tr>
     <td><?php echo $this->escapeHtml($post->title_post);?></td>
     <td><?php echo $this->escapeHtml($post->date_post);?></td>
-    <td><?php echo $this->escapeHtml($post->test_post);?></td>
+    <td><?php echo $this->escapeHtml($post->text_post);?></td>
 </tr>
 <?php endforeach; ?>
 </table>
